--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "vendor/my-composer-package",
-    "description": "Mô tả về gói Composer của bạn",
+    "name": "vendor/BaseService-DucHoang",
+    "description": "BaseService",
     "type": "library",
     "autoload": {
         "psr-4": {
